# Rusty

./: .gitignore  Cargo.toml  README.md  Usability.md  bundle.sh  icon.icns  release.sh  test.json  test.txt
.cargo/: config.toml
.github/: FUNDING.yml
Rusty.app/Contents/: Info.plist
completions-toml/: ansible-playbook.toml  ansible-vault.toml  ansible.toml  cd.toml  curl.toml  devscan.toml  docker.toml  git.toml  go.toml  grep.toml  httpd.toml  mysql.toml  npm.toml  pac.toml  php.toml  python.toml  sqlite3.toml
crates/rusty-app/: Cargo.toml
crates/rusty-app/src/: main.rs
crates/rusty-config/: Cargo.toml
crates/rusty-config/src/: lib.rs
crates/rusty-core/: Cargo.toml
crates/rusty-core/src/: attrs.rs  cell.rs  color.rs  cursor.rs  grid.rs  lib.rs  parser.rs
crates/rusty-git/: Cargo.toml
crates/rusty-git/src/: lib.rs  repo.rs
crates/rusty-hint/: Cargo.toml
crates/rusty-hint/src/: completions.rs  engine.rs  index.rs  lib.rs  man_parser.rs
crates/rusty-mux/: Cargo.toml
crates/rusty-mux/src/: layout.rs  lib.rs  pane.rs  session.rs  tab.rs
crates/rusty-platform/: Cargo.toml
crates/rusty-platform/src/: clipboard.rs  font.rs  lib.rs
crates/rusty-pty/: Cargo.toml
crates/rusty-pty/src/: lib.rs  pty.rs
crates/rusty-render/: Cargo.toml
crates/rusty-render/src/: doc.rs  json.rs  lib.rs  markdown.rs  trigger.rs
crates/rusty-renderer/: Cargo.toml
crates/rusty-renderer/src/: atlas.rs  frame.rs  lib.rs  pipeline.rs
crates/rusty-ui/: Cargo.toml
crates/rusty-ui/assets/: icon.icns
crates/rusty-ui/src/: input.rs  lib.rs  status_bar.rs  update.rs  window.rs
docs/: completions.md
