[workspace]
resolver = "2"
members = [
    "crates/rusty-config",
    "crates/rusty-core",
    "crates/rusty-pty",
    "crates/rusty-renderer",
    "crates/rusty-mux",
    "crates/rusty-git",
    "crates/rusty-hint",
    "crates/rusty-render",
    "crates/rusty-platform",
    "crates/rusty-ui",
    "crates/rusty-app",
]

[workspace.package]
version = "0.1.4"

# Shared dependency versions — override per-crate only when necessary.
[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
portable-pty = "0.8"
vte          = "0.13"
# Metal backend only — we target macOS/Apple Silicon exclusively for now.
# Disable Vulkan/GL/DX12 to cut compile time and binary size.
wgpu         = { version = "0.20", default-features = false, features = ["metal", "wgsl"] }
winit        = "0.30"
fontdue      = "0.8"
swash        = "0.1"
nix          = { version = "0.28", features = ["signal", "process", "fs"] }
git2         = "0.21"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bitflags            = "2"
pollster            = "0.3"
toml                = "0.8"
ureq                = { version = "2", features = ["json"] }
muda                = { version = "0.19", default-features = false }
