[package]
name    = "rusty-app"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
rusty-config   = { path = "../rusty-config" }
rusty-ui       = { path = "../rusty-ui" }
rusty-mux      = { path = "../rusty-mux" }
rusty-platform = { path = "../rusty-platform" }
tokio          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
ureq           = { workspace = true }
serde_json     = { workspace = true }
