[package]
name    = "rusty-mux"
version = "0.1.0"
edition = "2021"

# The multiplexer owns the layout tree and session persistence.
# It depends on core (grid types) and pty (pane processes) but
# nothing in the render layer — rendering pulls from mux state.
[dependencies]
rusty-core = { path = "../rusty-core" }
rusty-pty  = { path = "../rusty-pty" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
crossbeam-channel = { workspace = true }
