[package]
name    = "rusty-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
rusty-config      = { path = "../rusty-config" }
rusty-render      = { path = "../rusty-render" }
rusty-core        = { path = "../rusty-core" }
rusty-renderer    = { path = "../rusty-renderer" }
rusty-mux         = { path = "../rusty-mux" }
rusty-git         = { path = "../rusty-git" }
rusty-hint        = { path = "../rusty-hint" }
rusty-pty         = { path = "../rusty-pty" }
winit             = { workspace = true }
wgpu              = { workspace = true }
fontdue           = { workspace = true }
anyhow            = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
pollster          = { workspace = true }
muda              = { workspace = true }
ureq              = { workspace = true }
serde_json        = { workspace = true }
objc2             = { version = "0.6" }
objc2-app-kit     = { version = "0.3", features = ["NSApplication"] }
objc2-foundation  = { version = "0.3", features = ["NSDictionary", "NSString"] }
